sp1.tex: enumerate 環境を使う。

--- a/KOMABA2016/sp1.tex
+++ b/KOMABA2016/sp1.tex
@@ -8,8 +8,9 @@
 \includegraphics[width =7cm,bb = 0 0 202 202]{sp1slitherlink}
 \end{figure}
 \Subsection{スリザーリンクのルール}
-\begin{description}
-\item{1.} 点と点をタテヨコにつなげ、全体で1つの輪っかをつくります。
-\item{2.}  4つの点で作られた小さな正方形の中の数字は、その正方形に引く辺の数です。数字のない小さな辺には、何本線を引くかは分かりません。
-\item{3.} 線を交差させたり、枝分かれさせたりはしません。
-\end{description}
+\begin{enumerate}
+\renewcommand{\labelenumi}{\theenumi.}
+\item 点と点をタテヨコにつなげ、全体で1つの輪っかをつくります。
+\item  4つの点で作られた小さな正方形の中の数字は、その正方形に引く辺の数です。数字のない小さな辺には、何本線を引くかは分かりません。
+\item 線を交差させたり、枝分かれさせたりはしません。
+\end{enumerate}
