matrix 環境の代わりに、適切な *matrix 環境を使う。
\left(\begin{matrix} 〜 \end{matrix}\right) に対応するのは pmatrix 環境、
\left|\begin{matrix} 〜 \end{matrix}\right| に対応するのは vmatrix 環境である。

どこで (AMS-)LaTeX を勉強したら、 matrix 環境は知っているが pmatrix 環境は知らないなんてことになるのやら…。

--- a/KOMABA2016/main.tex
+++ b/KOMABA2016/main.tex
@@ -141,8 +141,8 @@
 \newcommand\satomacro{
 \def\vecb{\begin{pmatrix}}
 \def\vece{\end{pmatrix}}
-\def\detb{\left|\begin{matrix}}
-\def\dete{\end{matrix}\right|}
+\def\detb{\begin{vmatrix}}
+\def\dete{\end{vmatrix}}
 \def\realnum{{\mathbb R}}
 \def\dfrac{\displaystyle\frac}
 \def\dsum{\displaystyle\sum}
