\dfrac, \det は amsmath で定義されているので定義し直す必要はない。

--- a/KOMABA2016/main.tex
+++ b/KOMABA2016/main.tex
@@ -144,11 +144,9 @@
 \def\detb{\begin{vmatrix}}
 \def\dete{\end{vmatrix}}
 \def\realnum{{\mathbb R}}
-\def\dfrac{\displaystyle\frac}
 \def\dsum{\displaystyle\sum}
 \def\tenchi{{}^t\!}
-\def\det{{\mathrm{det}}}
-\def\rank{{\mathrm{rank}}}
+\def\rank{\operatorname{rank}}
 \def\delxkf{\dfrac{\partial f}{\partial x_k}}
 \def\delxp{\left(\dfrac{\partial}{\partial x}\right)_p}
 \def\delyp{\left(\dfrac{\partial}{\partial y}\right)_p}
