細々とした修正
- ito.tex: 括弧のサイズ
- osawa*.tex: 句読点
- osawaanalysis.tex: 以前の編集時に余計な文字が混ざったのを修正
- yamamoto.tex: gather* 環境を使う。

など。

--- a/KOMABA2016/ito.tex
+++ b/KOMABA2016/ito.tex
@@ -123,7 +123,7 @@ $1/12 \fallingdotseq 0.083$％づつ1ヶ月に1回お金が増える
 複利の％数と二倍になるまでの年数の積がおおよそ72になっているという法則です}
 と思ってしまうわけです．例えば，年に$10000$回利払いがされるような銀行があったとしたら
 \[
-100\mbox{万円}\times (1 + \frac{0.01}{10000})^{10000} = 101.005016 \mbox{万円}
+100\mbox{万円}\times \left(1 + \frac{0.01}{10000}\right)^{10000} = 101.005016 \mbox{万円}
 \]
 となりますが，よく見てみると，そこまで増えていません．どうやら上限があるようです．そしてこの上限が$e$なのです．
 ここで
