--- a/KOMABA2016/sato.tex
+++ b/KOMABA2016/sato.tex
@@ -236,7 +236,7 @@ $\varphi_i^{-1}\circ\varphi_j:\varphi_j^{-1}(U_i\cap U_j)\rightarrow\varphi_i^{-
 $f:M\rightarrow N$を多様体の間の$C^\infty$級写像で，$M$の次元$m$と$N$の次元$n$が$m\ge n$を満たしているとする．$q\in N$が正則値，すなわち，任意の$p\in f^{-1}(q)$について，微分写像$(df)_p$のrankが$n$であるとする．このとき，$f^{-1}(q)$は$m-n$次元の$C^{\infty}$級多様体となる．
 \end{s_theo}
 まず，この定理を応用すれば様々な多様体の例が得られることに注目してみよう．例えば，$f:\realnum^4 \rightarrow \realnum;(x,y,z,w)\mapsto x^2+y^2+z^2+w^2$という写像と，$1\in \realnum$について上の定理を適用してみると，$\rank(df)_p=\rank J_{f}=\rank(2x\:2y\:2z\:2w)\neq 0$ (なぜなら $(x,y,z,w)\in f^{-1}(1)$ より $x$, $y$, $z$, $w$ のいずれかは0でない)より$x^2+y^2+z^2+w^2=1$で表される$\realnum^4$の部分集合（3次元球面）が，3次元多様体となることの証明が得られる．他にも，例えば$f:\realnum^3\rightarrow \realnum;(x,y,z)=x^2+y^2-z^2$と$-1\in\realnum$に適用して，2葉双曲面が2次元多様体になることもわかる．
-この定理のイメージを述べよう．線形写像のrankは上で見たように，像が値域の中で何次元になっているかを表している．$(df)_p$のrankが$n$，すなわち$T_pN$の次元に等しいということは，それぞれの基底をうまく選ぶことによって，$(df)_p$は$(E_n\:\:0)$と行列表示できるということだから，このうまく選んだ$T_pM$の基底$D_1,\dots,D_m$について，$D_1,\dots D_n$という方向は$ｆ$によって保たれ，残りの$D_{n+1},\dots,D_m$という方向は$f$によってつぶれるということがわかる．この$m-n$個の元がなす$T_pM$の部分空間は，$M$における$f$の等位面$f^{-1}(q)$の接空間とみなせる．接空間が$m-n$次元になっているため，$p\in f^{-1}(q)$の十分近くでは$\realnum^{m-n}$の開集合と同相と見なせて，結局$m-n$次元の多様体とみなせる．なお，この定理においてrankの条件は本質的であり，例えば$f:\realnum^2\rightarrow\realnum;(x,y)\mapsto y^2-x^2(x+1)$という写像を考えると，点$(0,0)\in\realnum^2$でヤコビ行列が0になるため，上の定理からは$f^{-1}(0)$は1次元多様体になるかわからない．実際，$f^{-1}(0)$は$(0,0)$の近傍においては2つの曲線が交わる形になっていて，$\realnum$のどんな開集合(すなわち開区間)と同相ではないので1次元多様体とはならない．
+この定理のイメージを述べよう．線形写像のrankは上で見たように，像が値域の中で何次元になっているかを表している．$(df)_p$のrankが$n$，すなわち$T_pN$の次元に等しいということは，それぞれの基底をうまく選ぶことによって，$(df)_p$は$(E_n\:\:0)$と行列表示できるということだから，このうまく選んだ$T_pM$の基底$D_1,\dots,D_m$について，$D_1,\dots D_n$という方向は$f$によって保たれ，残りの$D_{n+1},\dots,D_m$という方向は$f$によってつぶれるということがわかる．この$m-n$個の元がなす$T_pM$の部分空間は，$M$における$f$の等位面$f^{-1}(q)$の接空間とみなせる．接空間が$m-n$次元になっているため，$p\in f^{-1}(q)$の十分近くでは$\realnum^{m-n}$の開集合と同相と見なせて，結局$m-n$次元の多様体とみなせる．なお，この定理においてrankの条件は本質的であり，例えば$f:\realnum^2\rightarrow\realnum;(x,y)\mapsto y^2-x^2(x+1)$という写像を考えると，点$(0,0)\in\realnum^2$でヤコビ行列が0になるため，上の定理からは$f^{-1}(0)$は1次元多様体になるかわからない．実際，$f^{-1}(0)$は$(0,0)$の近傍においては2つの曲線が交わる形になっていて，$\realnum$のどんな開集合(すなわち開区間)と同相ではないので1次元多様体とはならない．
 
 
 \Subsection{ベクトル場と積分曲線}
@@ -252,7 +252,7 @@ p\in U_{y-}ならX(p) & = &\sqrt{1-x^2-z^2}\delxp \\
 p\in U_{z+}ならX(p) & =  &-y\delxp+x\delxp \\
 p\in U_{z-}ならX(p) & = &-y\delxp+x\delxp 
 \end{eqnarray*}
-とそれぞれ定める．これがきちんと定義されていること(well-defined)であることを確認する必要がある．たとえば，$p\in U_{y+}\cap U_{z+}$のとき，上で定めている$X(p)$が同じものを示しているかを確認しなくてはならない．このケースだけ確認してみよう．今紛らわしいので$U_{z+}$の方の座標は$(x',y')$であらわすことにしよう，したがって$U_{z+}$における$T_PS^2$の基底は$\delxdp,\delydp$とあらわすことにしよう．$\delxp,\delzp$と$\delxdp,\delydp$の関係は$\varphi_{z+}^{-1}\circ\varphi_{y+}:\varphi_{y+}^{-1}(U_{y+}\cap U_{z+})\rightarrow\varphi_{z+}^{-1}(U_{y+}\cap U_{z+})$のヤコビ行列$J_{\varphi_{z+}^{-1}\circ\varphi_{y+}}$を用いて
+とそれぞれ定める．これがきちんと定義されていること（well-definedであること）を確認する必要がある．たとえば，$p\in U_{y+}\cap U_{z+}$のとき，上で定めている$X(p)$が同じものを示しているかを確認しなくてはならない．このケースだけ確認してみよう．今紛らわしいので$U_{z+}$の方の座標は$(x',y')$であらわすことにしよう，したがって$U_{z+}$における$T_pS^2$の基底は$\delxdp,\delydp$とあらわすことにしよう．$\delxp,\delzp$と$\delxdp,\delydp$の関係は$\varphi_{z+}^{-1}\circ\varphi_{y+}:\varphi_{y+}^{-1}(U_{y+}\cap U_{z+})\rightarrow\varphi_{z+}^{-1}(U_{y+}\cap U_{z+})$のヤコビ行列$J_{\varphi_{z+}^{-1}\circ\varphi_{y+}}$を用いて
 $$
 \left(\delxp\quad\delzp\right)=\left(\delxdp\quad\delydp\right)J_{\varphi_{z+}^{-1}\circ\varphi_{y+}}
 $$
@@ -285,13 +285,13 @@ $$
 
 \begin{s_defi}
 各点$p\in M$における接ベクトル空間$T_pM$を全て束ねたような空間を$TM=\coprod_{p\in M}T_pM$
-\footnote{一般に，集合の集まり$\{A_i\}_{i\in I}$が与えられたとき，$\coprod_{i\in I}A_i$は任意の$i\neq j\in I$に対して$A_i\cap A_j=\emptyset$となるように和集合をとったものを表す．}と表し,\textbf{接ベクトルバンドル}という.
+\footnote{一般に，集合の集まり$\{A_i\}_{i\in I}$が与えられたとき，$\coprod_{i\in I}A_i$は任意の$i\neq j\in I$に対して$A_i\cap A_j=\emptyset$となるように和集合をとったものを表す．}と表し，\textbf{接ベクトルバンドル}という.
 $TM$の元は$M$上の各点とその上の接ベクトル空間上の元の組と考えられるので，$T_pM\subset TM$の元を$p\in M$に対応させるような写像$\pi:TM\rightarrow M$を考えることが出来る．
-このとき,$TM$は$\realnum^{2n}$の開集合と同一視できる空間$\{\pi^{-1}(U_i)\}_{i\in I}$によって覆われて，$2m$次元の多様体とみなせる.
-ここで,ベクトル場$X$とは，多様体の写像$X:M\rightarrow TM$であって，任意の$p\in M$に対して$\pi\circ X(p) = p$を満たすものとして定義される．この写像が$C^{\infty}$級のときベクトル場$X$は$C^{\infty}$級と呼ばれる．
+このとき，$TM$は$\realnum^{2n}$の開集合と同一視できる空間$\{\pi^{-1}(U_i)\}_{i\in I}$によって覆われて，$2m$次元の多様体とみなせる．
+ここで，ベクトル場$X$とは，多様体の写像$X:M\rightarrow TM$であって，任意の$p\in M$に対して$\pi\circ X(p) = p$を満たすものとして定義される．この写像が$C^{\infty}$級のときベクトル場$X$は$C^{\infty}$級と呼ばれる．
 \end{s_defi}
 \begin{Proof}
-$TM$が$2m$次元の多様体の多様体になることについて証明する.\\
+$TM$が$2m$次元の多様体の多様体になることについて証明する．\\
 ここで，$M$の局所座標$(\varphi_i;U_i)$について，$\varphi_i^{-1}(U_i)$上の座標を$x_1\dots x_n$とする．$\pi^{-1}(U_i)\subset TM$の元は$2n$個の座標$x_1,\dots,x_n$($p$の座標を表す変数)および$b_1(p),\dots,b_n(p)$($\delxkp$の係数を表す変数)によって表示できるので，$\pi^{-1}(U_i)$は直積集合\footnote{一般に，$A$と$B$を集合として，直積集合$A\times B$は$A$の元と$B$の元の組全体の集合を表す．}$U_i\times \realnum^n$と考えることが出来る．つまり，全単射$\tilde{\varphi_i}:U_i\times \realnum^n\rightarrow\pi^{-1}(U_i);(x_1\dots,x_n,b_1,\dots,b_n)\mapsto ((x_1,\dots,x_n),b_1\delxop+\dots+b_n\delxnp)$によって，$\pi^{-1}(U_i)$の点は$U_i\times\realnum^n$と1対1に対応する．ここで，$U_i\times \realnum^n$は$\realnum^n\times \realnum^n$，すなわち$\realnum^{2n}$の開集合になっている．$\{(\varphi_i;U_i)\}_{i\in I}$を$M$の全ての局所座標とすると，$\{U_i\}_{i\in I}$は$M$を覆っていることから$TM$は$\realnum^{2n}$の開集合と同一視できる空間$\{\pi^{-1}(U_i)\}_{i\in I}$によって覆われるので，$2m$次元の多様体\footnote{注意深い人は，前節で定義した「多様体」は$\realnum^l$の部分集合になっていたので，$TM$が「多様体」となるためには$TM$がある$\realnum^l$の部分空間として表される必要があると考えるだろう．結果的にこのことは正しいが，ここではそれ以上触れない．}となる．今$\tilde{U_i}=\pi^{-1}(U_i)$と置くと．$\{(\tilde{\varphi_i};\tilde{U_i})\}_i$は$TM$の局所座標という．
 \end{Proof}
 さて，多様体$M$上の$C^\infty$級ベクトル場$X$が与えられたとき，ベクトル場に沿うような$M$上の曲線を積分曲線という．より正確に言いうと次のようになる.
