--- a/KOMABA2016/warizan.tex
+++ b/KOMABA2016/warizan.tex
@@ -410,7 +410,7 @@ SL(2,\mathbb{R})&\rightarrow & {\rm Diff}(H)\hspace{1cm}\begin{pmatrix}a&b\\c&d\
 このように，Lie群が推移的に作用している多様体は，必ずLie群の商の形で書くことができます．このような多様体を等質空間と言います．
 
 \begin{Ex}[球面]
- $SO(n+1)$の作用による球面$S^n$上のある1点$(0,0,0,\cdots,0,1)$の固定部分群は，
+ $SO(n+1)$の作用による球面$S^n$上のある1点$(0,0,0,\dotsc,0,1)$の固定部分群は，
  \[
 \left\{
 \left(
@@ -461,8 +461,8 @@ Riemannの一意化定理の一般化である，Klein-Poincar\'e-Koebeの一意
 
 \begin{thebibliography}{99}
 \bibitem{mathpdf} 数の構成　自然数から複素数まで \url{http://mathematics-pdf.com/pdf/construction_of_numbers.pdf}
-\bibitem{hel} S.Helgason.Differetntail Geometory and Symmetric Spacees.AMS Chelsea Publishing,2001
-\bibitem{sat} 佐武一郎.線型代数学．裳華房，数学選書1,1974
+\bibitem{hel} S. Helgason. Differetntail Geometory and Symmetric Spacees. AMS Chelsea Publishing, 2001
+\bibitem{sat} 佐武一郎．線型代数学．裳華房，数学選書1, 1974
 \bibitem{mat} 松坂和夫．集合・位相入門．岩波書店，1968
-\bibitem{kob} 小林俊行．数学の最先端21世紀への挑戦.vol1.Springer,2001
+\bibitem{kob} 小林俊行．数学の最先端21世紀への挑戦. vol1. Springer, 2001
 \end{thebibliography}
