クラスオプションの openright を openany に変更。
空白ページをなくして、総ページ数を削りたい。

--- a/KOMABA2016/main.tex
+++ b/KOMABA2016/main.tex
@@ -1,4 +1,4 @@
-\documentclass[notombow,episode,openright,dvipdfmx]{kyouritu}
+\documentclass[notombow,episode,openany,dvipdfmx]{kyouritu}
 \usepackage{graphicx,color}
 \usepackage{tikz}
 \usepackage{makeidx,multicol}
