タイプミスを修正

--- a/MAY2017/ziphil.tex
+++ b/MAY2017/ziphil.tex
@@ -214,7 +214,7 @@ $ (s,\ats s') = (\typstar,\ats \typsq) $ ‚Ìê‡‚ÍC‚¢‚í‚ä‚éˆË‘¶Œ^‚ð\¬‚·‚é‚½‚ß‚
 ‚ª“¾‚ç‚ê‚éD
 ˆË‘¶Œ^‚Ì‰ðŽß‚Í—lX‚ ‚é‚ªC‚±‚±‚Å‚Í‚±‚Ìƒm[ƒg‚Ìƒe[ƒ}‚Å‚ ‚éŒ^‚Æ–½‘è‚ÌŠÖŒW‚É’–Ú‚·‚éD
 ‚Ü‚¸C$ \typstar $ ‚Í–½‘è‚ÆW‡‚ð“¯Žž‚É•\‚·Œ^‚Å‚ ‚é‚Æl‚¦‚éD
-‚·‚é‚ÆC$ \alpha \olc\, \typstar $ ‚Í $ \alpha $ ‚ª‰½‚ç‚©‚ÌW‡‚Å‚ ‚é‚±‚Æ‚ðéŒ¾‚µ‚Ä‚¢‚é‚ÆŒ©‚È‚¹‚éD
+‚·‚é‚ÆC$ \alpha \ocl\, \typstar $ ‚Í $ \alpha $ ‚ª‰½‚ç‚©‚ÌW‡‚Å‚ ‚é‚±‚Æ‚ðéŒ¾‚µ‚Ä‚¢‚é‚ÆŒ©‚È‚¹‚éD
 ‚³‚ç‚ÉC$ \alpha \bto \typstar $ ‚Í $ \alpha $ ‚ÌŒ³‚ðŽó‚¯Žæ‚è–½‘è‚ð•Ô‚·Œ^‚Å‚ ‚é‚Æl‚¦‚ç‚ê‚éD
 ‚·‚È‚í‚¿C‚»‚ê‚Í $ \alpha $ ã‚ÌqŒê‚Å‚ ‚éD
 ‚µ‚½‚ª‚Á‚ÄC$ p \ocl\, (\alpha \bto \typstar) $ ‚É‚æ‚Á‚Ä $ p  $ ‚Í $ \alpha $ ã‚ÌqŒê‚¾‚ÆéŒ¾‚³‚ê‚Ä‚¢‚éD
